--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,16 @@
 <resources>
-    <string name="app_name">CulTour App</string>
+    <string name="app_name">CulTour</string>
     <string name="splash_txt">Explore Southeast Asia, Discover Your Gateway</string>
     <string name="slogan">Explore Southeast Asia, Discover Your Gateway</string>
     <string name="logo_desc">Logo</string>
+    <string name="login_title">Login</string>
+    <string name="text_username">Username</string>
+    <string name="text_password">Password</string>
+    <string name="toggle_password">Toggle Password</string>
+    <string name="text_dont_have_an_account">Don\'t have an account?</string>
+    <string name="text_sign_up">Sign Up</string>
+    <string name="register_title">Register</string>
+    <string name="text_email">Enter Your Email</string>
+    <string name="text_confirm_password">Re-Enter Your Password</string>
+    <string name="text_already_have_an_account">Already have an account?</string>
 </resources>
