--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="text_email">Enter Your Email</string>
     <string name="text_confirm_password">Re-Enter Your Password</string>
     <string name="text_already_have_an_account">Already have an account?</string>
+    <string name="helper_text">Required</string>
 </resources>
