finished login and register using API

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="text_confirm_password">Re-Enter Your Password</string>
     <string name="text_already_have_an_account">Already have an account?</string>
     <string name="helper_text">Required</string>
+    <string name="logout">Logout</string>
 </resources>
