--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,9 @@
     <string name="text_already_have_an_account">Already have an account?</string>
     <string name="helper_text">Required</string>
     <string name="logout">Logout</string>
+    <string name="weather_summary">In the whole range of the date, the weather will be </string>
+    <string name="dummy_text">Weather Summary</string>
+    <string name="search_hint">Search...</string>
+    <string name="start_date_text">Start Date</string>
+    <string name="end_date_text">End Date</string>
 </resources>
