--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -21,7 +21,7 @@
     <string name="search_hint">Search (eg, Bali)</string>
     <string name="start_date_text">Start Date</string>
     <string name="end_date_text">End Date</string>
-    <string name="welcome_chatbot">I\'m your personal travel assistant. I can help you with weather updates, travel norms.</string>
+    <string name="welcome_chatbot">I\'m your personal travel assistant. I can help you with weather updates, travel norms, and recommend what to pack or do.</string>
     <string name="chatbot_url_text">Here are the summary of the weather report in your given range</string>
     <string name="chatbot_response_text">Here are the recommendations on what you should do</string>
     <string name="chatbot_norm_text">Here are some of the things you should be aware of in the area</string>
